--- a/index.html
+++ b/index.html
@@ -3,62 +3,57 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PlayMate - Coming Soon</title>
+  <title>GymMate – Smart Gym Management</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    body {
-      font-family: "Segoe UI", Roboto, Arial, sans-serif;
-      background: linear-gradient(135deg, #1a1a2e, #16213e, #0f3460);
-      color: #fff;
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-    }
-    .container {
-      max-width: 600px;
-      padding: 20px;
-    }
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 20px;
-      letter-spacing: 2px;
-    }
-    p {
-      font-size: 1.2rem;
-      margin-bottom: 30px;
-      opacity: 0.8;
-    }
-    .loader {
-      width: 60px;
-      height: 60px;
-      border: 6px solid rgba(255, 255, 255, 0.2);
-      border-top: 6px solid #ffcc00;
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
-      margin: 0 auto 20px;
-    }
-    @keyframes spin {
-      to { transform: rotate(360deg); }
-    }
-    footer {
-      font-size: 0.9rem;
-      opacity: 0.6;
-      margin-top: 40px;
-    }
+    body { font-family: Arial, sans-serif; margin:0; padding:0; line-height:1.6; color:#262626; background:#fff; }
+    header { background:#262626; color:#fff; text-align:center; padding:60px 20px; }
+    header h1 { font-size:2.5rem; margin-bottom:15px; }
+    header p { font-size:1.2rem; margin-bottom:25px; }
+    .btn { background:#dc2626; color:#fff; padding:12px 24px; margin:5px; text-decoration:none; border-radius:5px; transition:background 0.2s, color 0.2s; }
+    .btn:hover { background:#fff; color:#dc2626; border:1px solid #dc2626; }
+    section { padding:60px 20px; max-width:900px; margin:auto; text-align:center; }
+    .features { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px; }
+    .card { padding:20px; border:1px solid #dc2626; border-radius:10px; background:#fafafa; color:#262626; }
+    footer { background:#262626; color:#fff; text-align:center; padding:20px; font-size:0.9rem; }
+    .footer-links a { color:#fff; margin:0 10px; text-decoration:none; }
+    .footer-links a:hover { text-decoration:underline; color:#dc2626; }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="loader"></div>
-    <h1>PlayMate</h1>
-    <p>We’re building something awesome.<br>Stay tuned — Coming Soon!</p>
-    <footer>© 2025 PlayMate</footer>
-  </div>
+  <header>
+    <h1>Smart Gym Management Made Simple</h1>
+    <p>Manage attendance, track fees, and grow your gym — all from one app.</p>
+    <a href="https://app.gymmate.co.in" class="btn">Try the App</a>
+    <a href="#features" class="btn" style="background:#dc2626;">Learn More</a>
+  </header>
+
+  <section id="features">
+    <h2>Why GymMate?</h2>
+    <div class="features">
+      <div class="card">✅ Attendance Tracking with QR codes</div>
+      <div class="card">✅ Fee Management with reminders</div>
+      <div class="card">✅ Built for Gym Owners, scalable for many gyms</div>
+    </div>
+  </section>
+
+  <section>
+    <h2>How It Works</h2>
+    <p>1. Create your gym account<br>2. Add members & set fee cycles<br>3. Let members check in with QR codes</p>
+  </section>
+
+  <section style="background:#dc2626; color:#fff; border-radius:10px;">
+    <h2>Ready to make gym management effortless?</h2>
+    <a href="https://app.gymmate.co.in" class="btn" style="background:#fff; color:#dc2626; border:1px solid #dc2626;">Get Started</a>
+  </section>
+
+  <footer>
+    <div class="footer-links">
+      <a href="/about.html">About</a> |
+      <a href="/contact.html">Contact</a> |
+      <a href="/privacy.html">Privacy</a> |
+      <a href="/terms.html">Terms</a>
+    </div>
+    <p>© 2025 GymMate Solutions</p>
+  </footer>
 </body>
 </html>
