add tm symbol near all google references

--- a/privacy.html
+++ b/privacy.html
@@ -17,7 +17,7 @@
 
   <h2>Information We Collect</h2>
   <ul>
-    <li><strong>Google Account Information:</strong> We use Google Authentication to sign you in. We collect your name, email address, and profile picture from your Google account.</li>
+    <li><strong>Google<sup>TM</sup> Account Information:</strong> We use Google<sup>TM</sup> Authentication to sign you in. We collect your name, email address, and profile picture from your Google<sup>TM</sup> account.</li>
     <li><strong>Phone Number:</strong> We collect your phone number to verify your identity and for communication purposes.</li>
     <li><strong>Usage Data:</strong> We may collect information on how the Service is accessed and used.</li>
   </ul>
@@ -31,10 +31,10 @@
   </ul>
 
   <h2>How We Store Your Data</h2>
-  <p>We use Google Sheets to store and manage your gym data securely. Your data is only accessible to you and authorized personnel.</p>
+  <p>We use Google<sup>TM</sup> Sheets to store and manage your gym data securely. Your data is only accessible to you and authorized personnel.</p>
 
   <h2>Third-Party Services</h2>
-  <p>We use Google Authentication and Google Sheets as part of our Service. These services are governed by their own privacy policies.</p>
+  <p>We use Google<sup>TM</sup> Authentication and Google<sup>TM</sup> Sheets as part of our Service. These services are governed by their own privacy policies.</p>
 
   <h2>Data Security</h2>
   <p>We take reasonable measures to protect your data, but no method of transmission over the Internet or electronic storage is 100% secure.</p>
