--- a/terms.html
+++ b/terms.html
@@ -19,10 +19,10 @@
   <p>You must use the Service in compliance with all applicable laws. You are responsible for the information you provide and the activities you perform using the Service.</p>
 
   <h2>2. Accounts</h2>
-  <p>You must use Google Authentication to access the Service. You are responsible for maintaining the security of your account and password.</p>
+  <p>You must use Google<sup>TM</sup> Authentication to access the Service. You are responsible for maintaining the security of your account and password.</p>
 
   <h2>3. Data</h2>
-  <p>We store your gym data using Google Sheets. You retain ownership of your data, but you grant us permission to use it as needed to provide the Service.</p>
+  <p>We store your gym data using Google<sup>TM</sup> Sheets. You retain ownership of your data, but you grant us permission to use it as needed to provide the Service.</p>
 
   <h2>4. Privacy</h2>
   <p>Your use of the Service is also governed by our <a href="/privacy.html">Privacy Policy</a>.</p>
@@ -34,7 +34,7 @@
   <p>We may update these Terms from time to time. Continued use of the Service after changes means you accept the new Terms.</p>
 
   <h2>7. Contact</h2>
-  <p>If you have any questions about these Terms, contact us at <a href="mailto:support@gymmate.co.in">support@gymmate.co.in</a>.</p>
+  <p>If you have any questions about these Terms, contact us at <a href="mailto:ramaraj.tt@gmail.com">ramaraj.tt@gmail.com</a>.</p>
 
   <p>© 2025 GymMate Solutions</p>
 </body>
