update privacy policy

--- a/privacy.html
+++ b/privacy.html
@@ -31,7 +31,7 @@
   </ul>
 
   <h2>How We Store Your Data</h2>
-  <p>We use Google<sup>TM</sup> Sheets to store and manage your gym data securely. Your data is only accessible to you and authorized personnel.</p>
+  <p>We use Google<sup>TM</sup> Sheets to store and manage your gym data securely. Your data is only accessible to you and authorized personnel who have access to the specified Google<sup>TM</sup> Sheet. We do not share, transfer, or disclose your Google<sup>TM</sup> user data with any third parties. Access to your data is strictly limited to those with permission to view the Google<sup>TM</sup> Sheet where your data is stored.</p>
 
   <h2>Third-Party Services</h2>
   <p>We use Google<sup>TM</sup> Authentication and Google<sup>TM</sup> Sheets as part of our Service. These services are governed by their own privacy policies.</p>
