--- a/index.html
+++ b/index.html
@@ -3,57 +3,200 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GymMate – Smart Gym Management</title>
+  <title>GymMate – 100% Free Gym Management App</title>
+
+  <link rel="icon" href="favicon/favicon.ico" sizes="any">
+  <link rel="icon" href="favicon/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/site.webmanifest">
+
   <style>
-    body { font-family: Arial, sans-serif; margin:0; padding:0; line-height:1.6; color:#262626; background:#fff; }
-    header { background:#262626; color:#fff; text-align:center; padding:60px 20px; }
-    header h1 { font-size:2.5rem; margin-bottom:15px; }
-    header p { font-size:1.2rem; margin-bottom:25px; }
-    .btn { background:#dc2626; color:#fff; padding:12px 24px; margin:5px; text-decoration:none; border-radius:5px; transition:background 0.2s, color 0.2s; }
-    .btn:hover { background:#fff; color:#dc2626; border:1px solid #dc2626; }
-    section { padding:60px 20px; max-width:900px; margin:auto; text-align:center; }
-    .features { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px; }
-    .card { padding:20px; border:1px solid #dc2626; border-radius:10px; background:#fafafa; color:#262626; }
-    footer { background:#262626; color:#fff; text-align:center; padding:20px; font-size:0.9rem; }
+    /* --- Base Styles (from your original) --- */
+    body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; margin:0; padding:0; line-height:1.6; color:#333; background:#f9f9f9; }
+    header { background:#262626; color:#fff; text-align:center; padding:80px 20px; position:relative; }
+    header h1 { font-size:3rem; margin-bottom:15px; }
+    header p { font-size:1.3rem; margin-bottom:30px; max-width: 600px; margin-left: auto; margin-right: auto; opacity: 0.9; }
+    .btn { display:inline-block; background:#dc2626; color:#fff; padding:14px 28px; margin:5px; text-decoration:none; border-radius:8px; transition: all 0.3s ease; font-weight:bold; border: 2px solid transparent; }
+    .btn:hover { background:#fff; color:#dc2626; border: 2px solid #dc2626; transform: translateY(-3px); }
+    .btn-secondary { background: transparent; border: 2px solid #fff; }
+    .btn-secondary:hover { background: #fff; color: #262626; }
+    section { padding:80px 20px; max-width:1000px; margin:auto; text-align:center; }
+    footer { background:#262626; color:#fff; text-align:center; padding:30px 20px; font-size:0.9rem; }
     .footer-links a { color:#fff; margin:0 10px; text-decoration:none; }
     .footer-links a:hover { text-decoration:underline; color:#dc2626; }
+    h2 { font-size: 2.5rem; margin-bottom: 20px; color: #262626; }
+    h3 { font-size: 1.8rem; margin-bottom: 10px; color: #262626; }
+    section p { max-width: 700px; margin: 0 auto 20px auto; font-size: 1.1rem; }
+
+    /* --- New Styles for Feature Showcase --- */
+    .feature-showcase { display: flex; align-items: center; gap: 50px; text-align: left; margin-top: 60px; }
+    .feature-showcase:nth-child(even) { flex-direction: row-reverse; }
+    .feature-text { flex: 1; }
+    .feature-text ul { list-style: none; padding: 0; }
+    .feature-text ul li { margin-bottom: 10px; font-size: 1.1rem; position: relative; padding-left: 30px; }
+    .feature-text ul li::before { content: '✔'; color: #dc2626; font-weight: bold; position: absolute; left: 0; }
+    .feature-image { flex: 1; }
+    .feature-image img { max-width: 65%; border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); }
+
+    .card-section { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px; margin-top: 40px; }
+    .card { padding:30px; border-radius:10px; background:#fff; color:#262626; text-align:left; border: 1px solid #eee; box-shadow: 0 4px 15px rgba(0,0,0,0.05); }
+    .card h3 { margin-top:0; font-size: 1.4rem; }
+    .card p { font-size: 1rem; }
+
+    /* --- Responsive Adjustments --- */
+    @media (max-width: 768px) {
+      header h1 { font-size: 2.2rem; }
+      header p { font-size: 1.1rem; }
+      h2 { font-size: 2rem; }
+      .feature-showcase, .feature-showcase:nth-child(even) { flex-direction: column; }
+      .feature-text { text-align: center; }
+      .feature-text ul { text-align: left; display: inline-block; }
+    }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Smart Gym Management Made Simple</h1>
-    <p>Manage attendance, track fees, and grow your gym — all from one app.</p>
-    <a href="https://app.gymmate.co.in" class="btn">Try the App</a>
-    <a href="#features" class="btn" style="background:#dc2626;">Learn More</a>
+
+  <header style="position:relative;">
+   <div style="position:fixed; top:0px; left:0px; right:0px; display:flex; justify-content:space-between; align-items:center; z-index:101; background:#262626; padding:10px 24px; box-shadow:0 2px 12px rgba(0,0,0,0.10);">
+
+  <!-- Logo -->
+  <div style="display:flex; align-items:center;">
+    <img src="assets/playmate-icon-red-bg.png" alt="GymMate Logo" style="height:44px; width:44px; border-radius:12px; box-shadow:0 2px 8px rgba(0,0,0,0.07); background:#fff;">
+    <span style="color:#fff; font-size:1.5rem; font-weight:bold; margin-left:12px; letter-spacing:1px;">GymMate</span>
+  </div>
+
+  <!-- Portal Button -->
+  <a href="https://app.gymmate.co.in" target="_blank" rel="noopener" class="btn btn-secondary" style="border:2px solid #fff; background:#262626; color:#fff; font-weight:bold; font-size:1.05rem; padding:10px 22px; border-radius:24px; box-shadow:0 2px 12px rgba(0,0,0,0.10); transition:background 0.2s, color 0.2s;">Portal</a>
+
+</div>
+
+    <h1>Finally, a gym management app that's actually <span style="border-bottom:3px solid #FF5722; font-weight:bold;">free</span></h1>
+    <p>No trials. No hidden fees. No credit card required. Manage members, track payments, and monitor attendance with an app built for gym owners like you.</p>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLScZL9RPcd-EWs88e1ufGWSsRba5s7fANOGbrLJIvaB2PNcJ_w/viewform" class="btn" target="_blank" rel="noopener">Start for Free</a>
+    <a href="#features" class="btn btn-secondary">See Features</a>
   </header>
 
-  <section id="features">
-    <h2>Why GymMate?</h2>
-    <div class="features">
-      <div class="card">✅ Attendance Tracking with QR codes</div>
-      <div class="card">✅ Fee Management with reminders</div>
-      <div class="card">✅ Built for Gym Owners, scalable for many gyms</div>
+  <section id="for-gym-owners">
+    <h1>Are you a gym owner?</h1>
+    <p>Are you still tracking user attendance and payments in registers?<br>
+    Don't want to spend too much on fancy gym management software?</p>
+    <p>Then you are in luck! GymMate is here to help you streamline your operations without breaking the bank.</p>
+  </section>
+
+  <section id="why-free">
+    <h2>How Can It Be 100% Free?</h2>
+    <div class="card-section">
+      <div class="card">
+        <h3>💡 No Server Costs</h3>
+        <p>GymMate securely stores all your data in your own Google Sheet. This eliminates expensive server and database costs, allowing the app to be free forever.</p>
+      </div>
+      <div class="card">
+        <h3>💪 By a Gym Owner, For Gym Owners</h3>
+        <p>As a software professional and a gym owner myself, I built this app to solve real-world problems I faced. It's a passion project, not a corporate one.</p>
+      </div>
     </div>
   </section>
 
-  <section>
-    <h2>How It Works</h2>
-    <p>1. Create your gym account<br>2. Add members & set fee cycles<br>3. Let members check in with QR codes</p>
+  <section id="features" style="background:#fff;">
+    <h2>Everything You Need to Run Your Gym</h2>
+    <p>From member management to financial insights, GymMate provides the tools to make your job easier.</p>
+
+    <div class="feature-showcase">
+      <div class="feature-image">
+        <img src="assets/member-list.png" alt="GymMate Member List Screen">
+      </div>
+      <div class="feature-text">
+        <h3>Powerful Member Management</h3>
+        <ul>
+          <li>Instantly see who is Active, Expiring Soon, or Expired with clear filters.</li>
+          <li>Sort members by Name, Join Date, or Expiry Date to find information quickly.</li>
+          <li>All your member data, organized and accessible.</li>
+        </ul>
+      </div>
+    </div>
+
+     <div class="feature-showcase">
+      <div class="feature-image">
+        <img src="assets/member-detail.png" alt="GymMate Member Detail Screen">
+      </div>
+      <div class="feature-text">
+        <h3>Complete Member Profiles</h3>
+        <ul>
+          <li>See a member's entire attendance history in a clear calendar view.</li>
+          <li>Access a full list of all payments made by that member.</li>
+          <li>Get a 360-degree view of each member in one place.</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="feature-showcase">
+      <div class="feature-image">
+        <img src="assets/payments.png" alt="GymMate Payments and Expense Screen">
+      </div>
+      <div class="feature-text">
+        <h3>Clear Financial Overview</h3>
+        <ul>
+          <li>Visualize your monthly earnings with an intuitive graph.</li>
+          <li>Track expenses like trainer fees, rent, and EB bills.</li>
+          <li>Easily compare income vs. expenses to understand your gym's financial health.</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="feature-showcase">
+      <div class="feature-image">
+        <img src="assets/attendance.png" alt="GymMate Attendance Tracking Screen">
+      </div>
+      <div class="feature-text">
+        <h3>Insightful Attendance Tracking</h3>
+        <ul>
+          <li>View weekly and monthly attendance trends in a simple graph.</li>
+          <li>Get key summaries in a card, like "Total Visits" and "Peak Hours".</li>
+          <li>Drill down to see individual check-in/check-out times for any member.</li>
+        </ul>
+      </div>
+    </div>   
+
+    <div class="feature-showcase">
+      <div class="feature-image">
+        <img src="assets/companion.png" alt="GymMate Companion App Screen">
+      </div>
+      <div class="feature-text">
+        <h3>Simple & Seamless Attendance</h3>
+        <ul>
+          <li>The system works with a dedicated companion app. Just install it on any old Android phone or tablet at your gym's entrance</li>
+          <li>Members simply enter their registered phone number or Member ID to log their attendance instantly. It's fast, easy, and reliable.</li>
+          <li>Syncs gym membership and attendance data in real time.</li>
+          <li>Gives you a clear idea about how many expired members are visiting the gym.</li>
+        </ul>
+        <a href="https://play.google.com/store/apps/details?id=com.gymmate.companion" target="_blank" rel="noopener" style="display:inline-block; margin-top:18px;">
+          <img src="assets/get-it-on-playstore.png" alt="Get it on Google Play" style="height:48px; vertical-align:middle;">
+        </a>
+      </div>
+    </div>
   </section>
 
-  <section style="background:#dc2626; color:#fff; border-radius:10px;">
-    <h2>Ready to make gym management effortless?</h2>
-    <a href="https://app.gymmate.co.in" class="btn" style="background:#fff; color:#dc2626; border:1px solid #dc2626;">Get Started</a>
+  <section style="background:#dc2626; color:#fff;">
+    <h2 style="color:#fff;">Ready to make gym management effortless?</h2>
+    <p>Join hundreds of gym owners who are simplifying their work with a completely free tool.</p>
+    <p>Fill out this <a href="https://docs.google.com/forms/d/e/1FAIpQLScZL9RPcd-EWs88e1ufGWSsRba5s7fANOGbrLJIvaB2PNcJ_w/viewform" target="_blank" rel="noopener" style="color:#fff; text-decoration:underline; font-weight:bold;">Google Form</a> to get started for free.</p>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLScZL9RPcd-EWs88e1ufGWSsRba5s7fANOGbrLJIvaB2PNcJ_w/viewform" class="btn" target="_blank" rel="noopener" style="background:#fff; color:#dc2626; border:1px solid #dc2626;">Get Started for Free</a>
+  </section>
+
+  <section style="background:#262626; color:#fff; padding:40px 20px 20px 20px;">
+    <h2 style="color:#fff;">Contact Us</h2>
+    <p>Have questions or need help? Email us at <a href="mailto:ramaraj.tt@gmail.com" style="color:#fff; text-decoration:underline;">ramaraj.tt@gmail.com</a></p>
   </section>
 
   <footer>
     <div class="footer-links">
-      <a href="/about.html">About</a> |
-      <a href="/contact.html">Contact</a> |
       <a href="/privacy.html">Privacy</a> |
       <a href="/terms.html">Terms</a>
     </div>
-    <p>© 2025 GymMate Solutions</p>
+    <p>&copy; 2025 GymMate Solutions | Chennai, India</p>
   </footer>
+
 </body>
 </html>
