update contact mail

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
   <section style="background:#262626; color:#fff; padding:40px 20px 20px 20px;">
     <h2 style="color:#fff;">Contact Us</h2>
-    <p>Have questions or need help? Email us at <a href="mailto:ramaraj.tt@gmail.com" style="color:#fff; text-decoration:underline;">ramaraj.tt@gmail.com</a></p>
+    <p>Have questions or need help? Email us at <a href="mailto:contact@gymmate.co.in" style="color:#fff; text-decoration:underline;">contact@gymmate.co.in</a></p>
   </section>
 
   <footer>
