--- a/privacy.html
+++ b/privacy.html
@@ -46,7 +46,7 @@
   </ul>
 
   <h2>Contact Us</h2>
-  <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:ramaraj.tt@gmail.com">ramaraj.tt@gmail.com</a>.</p>
+  <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:contact@gymmate.co.in">contact@gymmate.co.in</a>.</p>
 
   <p>© 2025 GymMate Solutions</p>
 </body>
