--- a/terms.html
+++ b/terms.html
@@ -34,7 +34,7 @@
   <p>We may update these Terms from time to time. Continued use of the Service after changes means you accept the new Terms.</p>
 
   <h2>7. Contact</h2>
-  <p>If you have any questions about these Terms, contact us at <a href="mailto:ramaraj.tt@gmail.com">ramaraj.tt@gmail.com</a>.</p>
+  <p>If you have any questions about these Terms, contact us at <a href="mailto:contact@gymmate.co.in">contact@gymmate.co.in</a>.</p>
 
   <p>© 2025 GymMate Solutions</p>
 </body>
