add meta for seo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GymMate – 100% Free Gym Management App</title>
 
+   <!-- 🔍 Primary SEO -->
+  <meta name="description" content="GymMate is a 100% free gym management app built for gym owners. Manage members, track payments, and monitor attendance — all synced with your Google Sheets.">
+  <meta name="keywords" content="free gym management app, gym software india, gym attendance tracker, gym member management, google sheets gym app, gymmate app">
+  <meta name="author" content="GymMate Solutions, Chennai, India">
+
+  <!-- 📱 Icons -->
   <link rel="icon" href="favicon/favicon.ico" sizes="any">
   <link rel="icon" href="favicon/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="favicon/apple-touch-icon.png">
@@ -21,6 +27,46 @@
 
     gtag('config', 'G-CF07DZEZVR');
   </script>
+
+ <!-- 🌐 Open Graph (for LinkedIn, Facebook, WhatsApp) -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="GymMate – Free Gym Management App">
+  <meta property="og:description" content="No trials. No hidden fees. Manage members, track payments, and monitor attendance — all synced with Google Sheets.">
+  <meta property="og:image" content="https://gymmate.co.in/assets/banner.jpg">
+  <meta property="og:url" content="https://gymmate.co.in">
+  <meta property="og:site_name" content="GymMate">
+
+  <!-- 🐦 Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="GymMate – Free Gym Management App">
+  <meta name="twitter:description" content="A free gym management app built for gym owners. Manage members, attendance, and payments effortlessly.">
+  <meta name="twitter:image" content="https://gymmate.co.in/assets/banner.png">
+
+  <!-- 📊 Schema.org (Google Rich Snippet) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "GymMate",
+    "operatingSystem": "Android, Web",
+    "applicationCategory": "BusinessApplication",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "INR"
+    },
+    "description": "GymMate is a free gym management app to manage members, attendance, and payments using Google Sheets.",
+    "url": "https://gymmate.co.in",
+    "publisher": {
+      "@type": "Organization",
+      "name": "GymMate Solutions",
+      "address": "Chennai, India"
+    }
+  }
+  </script>
+
+  <!-- ✅ Optional: Canonical URL -->
+  <link rel="canonical" href="https://gymmate.co.in">
 
   <style>
     /* --- Base Styles (from your original) --- */
