add meta for seo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="GymMate – Free Gym Management App">
   <meta property="og:description" content="No trials. No hidden fees. Manage members, track payments, and monitor attendance — all synced with Google Sheets.">
-  <meta property="og:image" content="https://gymmate.co.in/assets/banner.jpg">
+  <meta property="og:image" content="https://gymmate.co.in/assets/banner.png">
   <meta property="og:url" content="https://gymmate.co.in">
   <meta property="og:site_name" content="GymMate">
 
