--- a/index.html
+++ b/index.html
@@ -18,14 +18,18 @@
   <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
   <link rel="manifest" href="favicon/site.webmanifest">
 
-  <!-- Google tag (gtag.js) -->
+   <!-- Google tag (Analytics + Ads) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-CF07DZEZVR"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
+  
+    // Google Analytics 4
     gtag('config', 'G-CF07DZEZVR');
+  
+    // Google Ads
+    gtag('config', 'AW-969377157');
   </script>
 
  <!-- 🌐 Open Graph (for LinkedIn, Facebook, WhatsApp) -->
