--- a/index.html
+++ b/index.html
@@ -69,56 +69,55 @@
   }
   </script>
 
+  <script>
+  function toggleMenu() {
+    const nav = document.getElementById('nav-links');
+    nav.style.display = nav.style.display === 'flex' ? 'none' : 'flex';
+  }
+  </script>
+
   <!-- ✅ Optional: Canonical URL -->
   <link rel="canonical" href="https://gymmate.co.in">
   <link rel="stylesheet" href="index.css">
   
 </head>
 <body>
+  <header>
+    <div class="header-container">
+      <!-- Left side: Hamburger + Logo -->
+      <div class="left-header">
+        <!-- Hamburger Icon (mobile only) -->
+        <div class="hamburger" onclick="toggleMenu()">☰</div>
 
-  <header style="position:relative;">
-   <div style="position:fixed; top:0px; left:0px; right:0px; display:flex; justify-content:space-between; align-items:center; z-index:101; background:#262626; padding:10px 24px; box-shadow:0 2px 12px rgba(0,0,0,0.10);">
+        <!-- Logo -->
+        <div class="logo">
+          <img src="assets/playmate-icon-red-bg.png" alt="GymMate Logo">
+          <span>GymMate</span>
+        </div>
+      </div>
 
-    <!-- 🔝 Fixed Header with Navigation -->
-  <div style="position:fixed; top:0; left:0; right:0; display:flex; justify-content:space-between; align-items:center; z-index:101; background:#262626; padding:10px 24px; box-shadow:0 2px 12px rgba(0,0,0,0.10);">
+      <!-- Navigation Links (collapsible on mobile) -->
+      <nav id="nav-links">
+        <a href="how-to/how-to.html">How To</a>
+        <a href="faq.html">FAQ</a>
+        <a href="about.html">About Us</a>
+      </nav>
 
-    <!-- Logo -->
-    <div style="display:flex; align-items:center;">
-      <img src="assets/playmate-icon-red-bg.png" alt="GymMate Logo" style="height:44px; width:44px; border-radius:12px; box-shadow:0 2px 8px rgba(0,0,0,0.07); background:#fff;">
-      <span style="color:#fff; font-size:1.5rem; font-weight:bold; margin-left:12px; letter-spacing:1px;">GymMate</span>
-    </div>
-
-    <!-- Navigation Links -->
-    <nav style="display:flex; align-items:center; gap:22px;">
-      <a href="how-to/how-to.html">How To</a>
-      <a href="faq.html">FAQ</a>
-      <a href="about.html">About Us</a>
-
-      <!-- Portal Button -->
+      <!-- Always visible Portal button -->
       <a href="https://app.gymmate.co.in" target="_blank" rel="noopener"
         class="btn btn-secondary"
         style="border:2px solid #fff; background:#262626; color:#fff; font-weight:bold; font-size:1.05rem; padding:10px 22px; border-radius:24px; box-shadow:0 2px 12px rgba(0,0,0,0.10); transition:background 0.2s, color 0.2s;">
         Portal
       </a>
-    </nav>
-  </div>
+    </div>
 
-
-  <!-- Logo -->
-  <div style="display:flex; align-items:center;">
-    <img src="assets/playmate-icon-red-bg.png" alt="GymMate Logo" style="height:44px; width:44px; border-radius:12px; box-shadow:0 2px 8px rgba(0,0,0,0.07); background:#fff;">
-    <span style="color:#fff; font-size:1.5rem; font-weight:bold; margin-left:12px; letter-spacing:1px;">GymMate</span>
-  </div>
-
-  <!-- Portal Button -->
-  <a href="https://app.gymmate.co.in" target="_blank" rel="noopener" class="btn btn-secondary" style="border:2px solid #fff; background:#262626; color:#fff; font-weight:bold; font-size:1.05rem; padding:10px 22px; border-radius:24px; box-shadow:0 2px 12px rgba(0,0,0,0.10); transition:background 0.2s, color 0.2s;">Portal</a>
-
-</div>
-
-    <h1>Finally, a gym management app that's actually <span style="border-bottom:3px solid #FF5722; font-weight:bold;">free</span></h1>
-    <p>No trials. No hidden fees. No credit card required. Manage members, track payments, and monitor attendance with an app built for gym owners like you.</p>
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLScZL9RPcd-EWs88e1ufGWSsRba5s7fANOGbrLJIvaB2PNcJ_w/viewform" class="btn" target="_blank" rel="noopener">Start for Free</a>
-    <a href="#features" class="btn btn-secondary">See Features</a>
+    <!-- Header Content -->
+    <div class="header-content">
+      <h1>Finally, a gym management app that's actually <span>free</span></h1>
+      <p>No trials. No hidden fees. No credit card required...</p>
+      <a href="#" class="btn">Start for Free</a>
+      <a href="#features" class="btn btn-secondary">See Features</a>
+    </div>
   </header>
 
   <section id="for-gym-owners">
