--- a/header.html
+++ b/header.html
@@ -7,16 +7,17 @@
 
             <!-- Logo -->
             <div class="logo">
-                <img src="assets/playmate-icon-red-bg.png" alt="GymMate Logo">
+                <img src="/assets/playmate-icon-red-bg.png" alt="GymMate Logo">
                 <span>GymMate</span>
             </div>
         </div>
 
         <!-- Navigation Links (collapsible on mobile) -->
         <nav id="nav-links" class="nav-links">
-            <a href="how-to/how-to.html">How To</a>
-            <a href="faq.html">FAQ</a>
-            <a href="about.html">About Us</a>
+            <a href="/">Home</a>
+            <a href="/how-to/how-to.html">How To</a>
+            <a href="/faq.html">FAQ</a>
+            <a href="/about.html">About Us</a>
         </nav>
 
         <!-- Always visible Portal button -->
