--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     }
     document.addEventListener("DOMContentLoaded", async () => {
       includeHTML('header', '/header.html');
-      // includeHTML('footer', '/footer.html');
+      includeHTML('footer', '/footer.html');
     });
 
   </script>
@@ -234,16 +234,7 @@
     <h2 style="color:#fff;">Contact Us</h2>
     <p>Have questions or need help? Email us at <a href="mailto:contact@gymmate.co.in"
         style="color:#fff; text-decoration:underline;">contact@gymmate.co.in</a></p>
-  </section>
-
-  <footer>
-    <div class="footer-links">
-      <a href="/privacy.html">Privacy</a> |
-      <a href="/terms.html">Terms</a>
-    </div>
-    <p>&copy; 2025 GymMate Solutions | Chennai, India</p>
-  </footer>
-
+  </section> 
 </body>
-
+  <div id="footer"></div>
 </html>
