--- a/header.html
+++ b/header.html
@@ -16,7 +16,7 @@
         <nav id="nav-links" class="nav-links">
             <a href="/">Home</a>
             <a href="/how-to/how-to.html">How To</a>
-            <a href="/faq.html">FAQ</a>
+            <a href="/faq/faq.html">FAQ</a>
             <a href="/about.html">About Us</a>
         </nav>
 
