add about us page

--- a/faq/faq.html
+++ b/faq/faq.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Faq</title>
+  <title>How To | Faq</title>
+  <link rel="icon" href="/assets/playmate-icon-red-bg.png" />
 
   <link rel="stylesheet" href="faq.css">
   <link rel="stylesheet" href="/common.css">
