--- a/header.html
+++ b/header.html
@@ -17,7 +17,7 @@
             <a href="/">Home</a>
             <a href="/how-to/how-to.html">How To</a>
             <a href="/faq/faq.html">FAQ</a>
-            <a href="/about.html">About Us</a>
+            <a href="/about/about.html">About Us</a>
         </nav>
 
         <!-- Always visible Portal button -->
