Update link for 'Start for Free' button

--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
   <div class="top-content">
     <h1>Finally, a gym management app that's actually <span>free</span></h1>
     <p>No trials. No hidden fees. No credit card required...</p>
-    <a href="#" class="btn">Start for Free</a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLScZL9RPcd-EWs88e1ufGWSsRba5s7fANOGbrLJIvaB2PNcJ_w/viewform"
+      class="btn" target="_blank">Start for Free</a>
     <a href="#features" class="btn btn-secondary">See Features</a>
   </div>
 
