update how to sectionf or self onboarding instructions

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   <div class="top-content">
     <h1>Finally, a gym management app that's actually <span>free</span></h1>
     <p>No trials. No hidden fees. No credit card required...</p>
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLScZL9RPcd-EWs88e1ufGWSsRba5s7fANOGbrLJIvaB2PNcJ_w/viewform"
+    <a href="https://app.gymmate.co.in"
       class="btn" target="_blank">Start for Free</a>
     <a href="#features" class="btn btn-secondary">See Features</a>
   </div>
@@ -222,11 +222,8 @@
   <section style="background:#dc2626; color:#fff;">
     <h2 style="color:#fff;">Ready to make gym management effortless?</h2>
     <p>Join hundreds of gym owners who are simplifying their work with a completely free tool.</p>
-    <p>Fill out this <a
-        href="https://docs.google.com/forms/d/e/1FAIpQLScZL9RPcd-EWs88e1ufGWSsRba5s7fANOGbrLJIvaB2PNcJ_w/viewform"
-        target="_blank" rel="noopener" style="color:#fff; text-decoration:underline; font-weight:bold;">Google Form</a>
-      to get started for free.</p>
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLScZL9RPcd-EWs88e1ufGWSsRba5s7fANOGbrLJIvaB2PNcJ_w/viewform"
+   
+    <a href="https://app.gymmate.co.in"
       class="btn" target="_blank" rel="noopener" style="background:#fff; color:#dc2626; border:1px solid #dc2626;">Get
       Started for Free</a>
   </section>
